--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,40 +1,38 @@
 {
   "name": "@pokemon-quiz/backend",
-  "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.ts",
-  "directories": {
-    "test": "test"
-  },
+  "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register \"test/**/*.ts\"",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
-    "build:ts": "tsc",
-    "watch:ts": "tsc -w",
-    "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:pull": "prisma db pull",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@fastify/autoload": "^6.0.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.2.0",
     "@fastify/jwt": "^10.0.0",
-    "@fastify/sensible": "^6.0.0",
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
-    "@prisma/client": "^7.3.0",
-    "fastify": "^5.0.0",
-    "fastify-cli": "^7.4.1",
-    "fastify-plugin": "^5.0.0"
+    "@prisma/adapter-pg": "7.0.0",
+    "@prisma/client": "7.0.0",
+    "@scalar/fastify-api-reference": "^1.44.18",
+    "@supabase/supabase-js": "^2.48.1",
+    "fastify": "5.6.1",
+    "fastify-plugin": "^5.0.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@types/node": "^24.0.8",
-    "c8": "^10.1.2",
-    "concurrently": "^9.0.0",
-    "fastify-tsconfig": "^3.0.0",
-    "prisma": "^7.3.0",
-    "ts-node": "^10.4.0",
-    "typescript": "~5.9.2"
+    "@types/node": "22.18.12",
+    "@types/pg": "^8.15.6",
+    "dotenv": "^17.2.1",
+    "pino-pretty": "^13.1.3",
+    "prisma": "7.0.0",
+    "tsx": "^4.20.6",
+    "typescript": "5.8.2"
   }
 }
