--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,32 +1,25 @@
 {
-    "extends": "fastify-tsconfig",
-    "compilerOptions": {
-        "target": "ES2020",
-        "module": "CommonJS",
-        "lib": [
-            "ES2020"
-        ],
-        "outDir": "dist",
-        "preserveConstEnums": true,
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "src/*"
-            ]
-        }
-    },
-    "include": [
-        "src/**/*.ts"
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "commonjs",
+    "lib": [
+      "ES2022"
     ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
