--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "qs": "^6.15.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
