--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,10 +14,13 @@
   "packageManager": "pnpm@10.28.1",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.158.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
+    "qs": "^6.15.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
@@ -30,6 +33,7 @@
     "@pokemon-quiz/interface": "workspace:*",
     "@tanstack/router-plugin": "^1.158.4",
     "@types/node": "^25.2.2",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
