--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,11 @@
     "db:push": "prisma db push",
     "db:pull": "prisma db pull",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
@@ -27,6 +31,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@pokemon-quiz/interface": "workspace:*",
     "@types/node": "22.18.12",
     "@types/pg": "^8.15.6",
     "dotenv": "^17.2.1",
