fix(backend): env.example 수정

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -12,3 +12,8 @@ SUPABASE_SERVICE_ROLE_KEY=""
 # Server
 PORT=3000
 NODE_ENV=development
+
+# Secret Key
+JWT_SECRET=""
+COOKIE_SECRET=""
+ENCRYPTION_KEY=""
