--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,10 +21,12 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "motion": "^12.34.0",
+    "next-themes": "^0.4.6",
     "qs": "^6.15.0",
     "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
