fix(frontend): api 요청 proxy 처리

--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -4,6 +4,10 @@
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "https://pokemon-quiz-gbkq.onrender.com/api/:path*"
     }
   ]
 }
